[gd_scene load_steps=27 format=2]

[ext_resource path="res://ui/ui_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/fonts/64x.tres" type="DynamicFont" id=2]
[ext_resource path="res://world_all/gems/gem.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/ui_slot.png" type="Texture" id=4]
[ext_resource path="res://ui/buttons/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/buttons/button_focus.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/buttons/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/buttons/button_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/world_icons.png" type="Texture" id=9]
[ext_resource path="res://world_all/checkpoints/checkpoint.png" type="Texture" id=10]
[ext_resource path="res://ui/ui_panel_bg.tres" type="StyleBox" id=11]
[ext_resource path="res://ui/level_enter_menu/level_enter_menu.gd" type="Script" id=12]
[ext_resource path="res://ui/fonts/48x.tres" type="DynamicFont" id=13]
[ext_resource path="res://ui/bg_blur.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 9, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 18, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 27, 0, 9, 16 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BGBlur:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BGBlur:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "show"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.85 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BGBlur:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BGBlur:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnterLevel" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGBlur" parent="." instance=ExtResource( 14 )]
visible = false

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.15
anchor_top = 1.0
anchor_right = 0.85
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemBG" type="Panel" parent="Panel"]
anchor_left = 0.03
anchor_top = 0.132
anchor_right = 0.954
anchor_bottom = 0.35
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/GemBG"]
anchor_left = 0.004
anchor_top = 0.04
anchor_right = 0.995
anchor_bottom = 0.965
mouse_filter = 2
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenContainer" type="HBoxContainer" parent="Panel/GemBG"]
anchor_top = 0.151
anchor_right = 0.25
anchor_bottom = 0.151
rect_scale = Vector2( 4, 4 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemSlot1" type="TextureRect" parent="Panel/GemBG/GenContainer"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0
mouse_filter = 0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="TextureRect" parent="Panel/GemBG/GenContainer/GemSlot1"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 2.0
anchor_right = 1.0
anchor_bottom = 2.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/GemBG/GenContainer/GemSlot1/Gem"]
anims/RESET = SubResource( 13 )
anims/show = SubResource( 5 )

[node name="GemSlot2" type="TextureRect" parent="Panel/GemBG/GenContainer"]
margin_left = 95.0
margin_right = 111.0
margin_bottom = 16.0
mouse_filter = 0
texture = ExtResource( 4 )

[node name="Gem" type="TextureRect" parent="Panel/GemBG/GenContainer/GemSlot2"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 2.0
anchor_right = 1.0
anchor_bottom = 2.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/GemBG/GenContainer/GemSlot2/Gem"]
anims/RESET = SubResource( 14 )
anims/show = SubResource( 11 )

[node name="GemSlot3" type="TextureRect" parent="Panel/GemBG/GenContainer"]
margin_left = 115.0
margin_right = 131.0
margin_bottom = 16.0
mouse_filter = 0
texture = ExtResource( 4 )

[node name="Gem" type="TextureRect" parent="Panel/GemBG/GenContainer/GemSlot3"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 2.0
anchor_right = 1.0
anchor_bottom = 2.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/GemBG/GenContainer/GemSlot3/Gem"]
anims/RESET = SubResource( 15 )
anims/show = SubResource( 12 )

[node name="LogoBG" type="Panel" parent="Panel"]
anchor_left = 0.03
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 0.8
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/LogoBG"]
anchor_left = 0.004
anchor_top = 0.02
anchor_right = 0.995
anchor_bottom = 0.98
mouse_filter = 2
color = Color( 1, 1, 1, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkpoint" type="TextureRect" parent="Panel/LogoBG"]
anchor_top = 0.065
anchor_right = 0.167
anchor_bottom = 0.099
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 10 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldIcons" type="HBoxContainer" parent="Panel/LogoBG"]
anchor_top = 0.165
anchor_right = 0.017
anchor_bottom = 0.165
rect_scale = Vector2( 8, 8 )
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="Panel/LogoBG/WorldIcons"]
margin_left = 2.0
margin_right = 11.0
margin_bottom = 16.0
mouse_filter = 2
texture = SubResource( 3 )

[node name="2" type="TextureRect" parent="Panel/LogoBG/WorldIcons"]
visible = false
margin_top = 20.0
margin_right = 9.0
margin_bottom = 36.0
mouse_filter = 2
texture = SubResource( 4 )

[node name="3" type="TextureRect" parent="Panel/LogoBG/WorldIcons"]
visible = false
margin_top = 30.0
margin_right = 9.0
margin_bottom = 46.0
mouse_filter = 2
texture = SubResource( 16 )

[node name="4" type="TextureRect" parent="Panel/LogoBG/WorldIcons"]
visible = false
margin_top = 40.0
margin_right = 9.0
margin_bottom = 56.0
mouse_filter = 2
texture = SubResource( 6 )

[node name="NotActive" type="Label" parent="Panel/LogoBG"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 13 )
text = "world_selector.teleporter_not_active"
align = 1
valign = 1

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.1
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Foggy Overlands - 1"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.84
anchor_right = 0.9
anchor_bottom = 0.85
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel/HBoxContainer"]
margin_right = 242.0
margin_bottom = 60.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../Start")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../Start")
focus_previous = NodePath("../Start")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "global.back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Panel/HBoxContainer"]
margin_left = 252.0
margin_right = 762.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../Back")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath("../Back")
focus_previous = NodePath("../Back")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "level_enter_menu.start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/show = SubResource( 18 )
